--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@ body {
       align-items: center;
       flex-direction: column;
       max-width: 1140px;
-      width: 100%;
+      width: 80%;
       margin: 0 auto;
       padding: 0 20px;
 
@@ -58,19 +58,27 @@ body {
 
     .App {
       .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        
+        max-width: 430px;
+        width: 90%;
+        padding:0;
+        margin: 0;
+
+        &:first-of-type {
+          align-self: flex-start;
+        }
+
         .header {
           display: flex;
           justify-content: space-around;
-          flex-wrap: wrap;
-          // flex-direction: column;
-
-          .headerSearch{
-            order: 1;
-          }
-
-          .headerButton{
-            flex-direction: column-reverse;
-          }
+          align-self: flex-start;
+          width: 100%;     
+          padding: 0 16px;
+          gap: 0px;
 
 
         }
