--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -43,3 +43,31 @@
 
     }
 }
+
+@media (max-width: 768px) {
+    .news{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        background-color: #ffffff;
+        margin: 30px;
+        width: 90%;
+        max-width: 765px;
+        height: 100%;
+        border-radius: 90px;
+
+        .newsHeading{
+            margin: 40px;
+            font-size: 40px;
+            color: #0039C7;
+    
+            b {
+                color: black;
+                font-weight: 600;
+    
+            }
+        }
+    }
+  
+}
