--- a/src/styles/card.module.scss
+++ b/src/styles/card.module.scss
@@ -39,7 +39,7 @@
 
 
       h6 {
-        font-size: 28px;
+        font-size: 18px;
 
         margin: 0;
         padding: 0;
@@ -108,6 +108,13 @@
 
   }
 
+}
+
+@media (max-width: 400px) {
+  .newsCard{
+    max-width: 200px;
+    height: 180px;
+  }
 }
 
 @media (max-width: 768px) {
